Fixed the styles for fixtures and results so that the team names are aligned perfectly with the span elements

--- a/src/containers/Fixtures/fixtures.scss
+++ b/src/containers/Fixtures/fixtures.scss
@@ -50,7 +50,22 @@
           align-items: center;
           gap: 0 1em;
 
+          p {
+            width: calc(50%);
+
+            &:nth-of-type(1) {
+              text-align: right;
+            }
+
+            &:nth-of-type(2) {
+              text-align: left;
+            }
+          }
+
           span {
+            width: 20%;
+            text-align: center;
+            margin: 0 5px;
             background: #000;
             color: #fff;
             font-weight: bold;
@@ -109,11 +124,24 @@
   }
 }
 
-
-@media screen and (width >= 900px){
-    .Tables {
-        table {
-            width: 90%;
+@media screen and (width >= 900px) {
+  .Fixtures {
+    .UpComingMatches {
+    .MatchesList {
+      .Match {
+        .body {
+          span {
+            width: 5%;
+          }
         }
+      }
     }
+
+    .Tables {
+      table {
+        width: 90%;
+      }
+    }
+  }
+  }
 }
